# MetaNN

./: .gitignore  CMakeLists.txt
MetaNN/: CMakeLists.txt
MetaNN/data/: dynamic.h  scalable_tensor.h
MetaNN/evaluate/: eval_buffer.h  eval_dispatcher.h  eval_handle.h
MetaNN/facilities/cont_metafuns/: sequential.h
MetaNN/layers/composite/: _.h
MetaNN/layers/facilities/: layer_in_map.h  policies.h  traits.h
MetaNN/layers/principal/math/: add_layer.h  substract_layer.h
MetaNN/layers/principal/nn/: nll_loss_layer.h  relu_layer.h
MetaNN/layers/recurrent/: gru_step.h  recurrent_layer.h
MetaNN/model/param_initializer/: constant_filler.h  gaussian_filler.h  var_scale_filler.h
MetaNN/model/param_initializer/facilities/: fill_with_spec_dist.h
MetaNN/operation/facilities/: _.h  instance_id.h  operation_frame.h  policies.h
MetaNN/operation/math/: reduce_sum.h  square.h
MetaNN/operation/others/: _.h  interpolate.h
MetaNN/policies/: _.h
Tests/: CMakeLists.txt
Tests/DataOpTest/: CMakeLists.txt  main.cpp
Tests/DataOpTest/data/facilities/: _.h
Tests/DataOpTest/operation/: _.h
Tests/DataOpTest/operation/math/: _.h
Tests/LayerTest/: CMakeLists.txt  main.cpp
Tests/LayerTest/composite/: _.h
Tests/LayerTest/principal/: _.h
Tests/LayerTest/recurrent/: _.h
Tests/OtherTests/: CMakeLists.txt  main.cpp
Tests/OtherTests/model/: _.h
Tests/OtherTests/policies/: test_policy_operations.cpp
cmake/: MetaNNConfig.cmake.in
